# microbiome_master_db

./: README.md  bacteria_data.db  create_db_schema.py  pyproject.toml  shell.nix
scripts/: compare_names.py  ensemble_name.csv  environment.yaml  main.py
scripts/database/: get_names.py  old_schemas.py  schema.py
scripts/download_scripts/: ensembl.sh  patric.sh  refseq.sh
scripts/name_comparison/: get_ensemble_name.sh
