[tool.poetry]
name = "metagenomics-master-db"
version = "0.1.0"
description = "Consolidating and automating multiple genomic database"
authors = ["Oscar Cisneros"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
pandas = "^2.0.2"
sqlalchemy = "^2.0.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
